// coding: utf-8
// Copyright (c) 2017-present, BigCommerce Pty. Ltd. All rights reserved
//
// Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
// documentation files (the "Software"), to deal in the Software without restriction, including without limitation the
// rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit
// persons to whom the Software is furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in all copies or substantial portions of the
// Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
// WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
// COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
// OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
//
syntax = "proto3";

package rpc;

// Demonstration service
service ThingService {

    // Request calls
    // For testing a request/response call
    rpc GetThing(GetThingRequest) returns (GetThingResponse) {}
}

// Represents a generic thing
message Thing {
    uint32 id = 1;
    string name = 2;
}

// Requests

// Request for geting a single thing
message GetThingRequest {
    uint32 id = 1;
    uint32 sleep = 2;
}

// Response for getting a single thing
message GetThingResponse {
    Thing thing = 1;
}
